# orange-story-navigator

./: .coveragerc  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.pypi  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish-to-pypi.yml  publish-to-testpypi.yml  test.yml
doc/: conf.py  index.rst  widgets.json
doc/widgets/: CODE_OF_CONDUCT.md  actionanalysis.md  actions.md  actoranalysis.md  buildingfromsource.md  changelog.md  contact.md  contribute.md  dsgdepparser.md  dsgruleset.md  dsgsrl.md  dsgtagger.md  elements.md  faqs.md  howtocite.md  inaction.md  install.md  installation.md  knownissues.md  means.md  mywidget.md  narrativenetwork.md  purpose.md  setting.md  settinganalysis.md  tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md  tutorial6.md  tutorial7.md  tutorial8.md  tutorials.md  usage.md
doc/widgets/fairytales/: fairytales.tab
doc/widgets/fairytales/text_files/: LIII_SNEEUWWITJE.txt  LII_KONING_LIJSTERBAARD.txt  LIX_FRIEDER_EN_KATERLIESJE.txt  LI_VOGELBUIT.txt  LVIII_DE_HOND_EN_DE_MUSCH.txt  LVII_DE_GOUDEN_VOGEL.txt  LVI_DE_LIEFSTE_ROLAND.txt  LV_ROMPELSTEELTJE.txt  LXIII_DE_DRIE_VEEREN.txt  LXII_DE_BIJENKONINGIN.txt  LXIV_DE_GOUDEN_GANS.txt  LXIX_JORINDE_EN_JORINGEL.txt  LXI_HET_BOERKE.txt  LXVIII_DE_GAUWDIEF_EN_ZIJN_MEESTER.txt  LXVII_DE_TWAALF_JAGERS.txt  LXVI_HAZEBRUIDJE.txt  LXV_ALBONTJE.txt  LXXIII_DE_WOLF_EN_DE_VOS.txt  LXXI_HOE_ER_ZES_DOOR_DE_WERELD_KWAMEN.txt  LXX_DE_DRIE_GELUKSKINDEREN.txt  LX_DE_TWEE_BROEDERS.txt  L_DOORNENROOSJE.txt  XLIII_VROUW_TRUDE.txt  XLII_DE_PEET.txt  XLIV_PEET_DE_DOOD.txt  XLIX_DE_ZES_ZWANEN.txt  XLI_MIJNHEER_KORBES.txt  XLVIII_DE_OUDE_SULTAN.txt  XLVII_VAN_DEN_AMANDELBOOM.txt  XLV_HOE_DUIMPJE_OP_REIS_GING.txt  XL_DE_ROOVERBRUIGOM.txt  XXXIX_DE_KABOUTERTJES.txt  XXXVIII_DE_BRUILOFT_VAN_VROUW_VOS.txt  XXXVII_DUIMPJE.txt  XXXV_DE_KLEERMAKER_IN_DEN_HEMEL.txt
doc/widgets/workflows/: 5_radar_plot_for_individual_person_in_story.ows  7_clustering_stories_based_on_settings_with_chatGPT.ows  Agency.ows  tutorial1_agency.ows  tutorial2_evolving_sentiment_in_a_story.ows  tutorial3_radar_plot_with_halliday_custom_word_list.ows  tutorial4_radar_plot_for_individual_person_in_story.ows  tutorial5_settings.ows  tutorial6_past_present_future_tense.ows  tutorial7_clustering_stories_based_on_settings_with_chatGPT.ows  tutorial8.ows  tutorial8_five_widgets.ows
examples/: example_barchart_longer_stories.ows
orangecontrib/: __init__.py
orangecontrib/example/widgets/: letters.tab  mywidget.py
orangecontrib/navigatingstories/widgets/: __init__.py  owdsgnldeprules.py  owstanzanldep.py  owstanzanlsrl.py
orangecontrib/navigatingstories/widgets/rules/: multilingual_dsg_patterns_nl.json
orangecontrib/storynavigation/: __init__.py
orangecontrib/storynavigation/modules/: actionanalysis.py  actoranalysis.py  constants.py  error_handling.py  meansanalysis.py  purposeanalysis.py  sentiment.py  settinganalysis.py  tagging.py  test.py  util.py
orangecontrib/storynavigation/netviz/: graphview.py
orangecontrib/storynavigation/resources/: complete_data_columns.csv  dutch_entities.csv  dutch_halliday_action_list.csv  dutch_prepositions.csv  dutch_purpose_adverbs.csv  dutch_purpose_triggers.csv  dutch_purpose_verbs.csv  dutch_time_words.csv  dutch_verb_frames.csv  dutchpronouns.txt  dutchstopwords.txt  english_halliday_action_list.csv  english_time_words.csv  english_verb_frames.csv  englishpronouns.txt  englishverbs.csv  false_positive_verbs.txt  false_positive_verbs_english.txt  halliday_dimensions_prosub.json  halliday_dimensions_sub.json  past_tense_verbs_dutch.txt  past_tense_verbs_english.txt  present_tense_verbs_dutch.txt  present_tense_verbs_english.txt
orangecontrib/storynavigation/tests/: storynavigator-testdata_quotes.tab  testOWSNDSGDepParser.py  test_OWSNActionAnalysis.py  test_OWSNActorAnalysis.py  test_OWSNSettingAnalysis.py  test_util.py
orangecontrib/storynavigation/utils/: dictionary_verbs_halliday_dimensions.csv  halliday_dimensions_process.json  halliday_dimensions_realm.json
orangecontrib/storynavigation/widgets/: OWArgExplorer.py  OWCreateInstance.py  OWSNActionAnalysis.py  OWSNActorAnalysis.py  OWSNAnthologyNetwork.py  OWSNBreachAnalysis.py  OWSNDSGDepParser.py  OWSNDSGRuleset.py  OWSNDSGSRL.py  OWSNDSGTagger.py  OWSNMeansAnalysis.py  OWSNNarrativeNetwork.py  OWSNPurposeAnalysis.py  OWSNSentimentAnalyzer.py  OWSNSettingAnalysis.py  OWSNTagger.py  OWSNsettingExtractor.py  OWSNsettingLLMbase.py  __init__.py  test.html
orangecontrib/storynavigation/widgets/icons/: download.html
tests/: short-testdata.tab  storynavigator-testdata.tab  test_OWSNActorAnalysis.py  test_meansanalysis.py
workflows/: LLMWidgetTesting.ows  SettingWidgetTesting.ows  action and actors combined.ows  action and actors v1.ows  action and actors v2.ows  cluster analysis on grimm texts.ows  story_navigator_example_workflow.ows  storysetting.ows  test_flow.ows  thijs.ows  wf_31.ows  wf_39.ows  wf_39_without custom.ows
workflows/issue_testing/: issue37.ows  issue44.ows  issue51.ows  issue52.ows  issue54.ows  issue77.ows
workflows/wf_navigator/1 agency analysis/: High agency extended.ows  High agency extended2.ows  High agency extended3.ows  High agency.ows  test.ows
workflows/wf_navigator/2 andrade articel replication/: Andrade replication.ows  Who are in the narratives Andrade replication.ows
workflows/wf_navigator/3 analysis with custion word list/: .network with sentiment.ows.swp.p  action and actors combined.ows  custom word list usage.ows  network with sentiment.ows
workflows/wf_navigator/5 narrative network analysis/: corpus to network.url  network.ows  network2.ows
workflows/wf_navigator/6 setting analysis/: Setting.ows  Setting2ows.ows
workflows/wf_navigator/7 global story analysis with chatgpt/: global story analysis.ows
workflows/wf_navigator/8 restructuring elements output/: eleemtns output.ows
workflows/wf_orange/: 650-story-arcs.ows  cookies.ows
(+5 files in other folders)
