[build-system]
requires = ["setuptools", "wheel", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

#[tool.pytest.ini_options]
#pythonpath = [
#  "."
#]
# testpaths = ["orangecontrib/storynavigation/tests"]
#filterwarnings = [
#    "ignore",
#    "default:::orangecontrib.storynavigation"
#]

# [tool.coverage.run]
# branch = true
# source = ["orangecontrib/storynavigation"]
# relative_files = true

[tool.coverage.report]
show_missing = true