[metadata]
author = Kody Moodley
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Narrative analysis add-on for the Orange 3 data mining software package.
keywords = 
    orange3 add-on
    story analysis
    narrative theory
    natural language processing
    text mining
    story networks
    character networks
long_description = file: README.md
long_description_content_type = text/markdown
name = storynavigator
project_urls =
    Bug Tracker = https://github.com/navigating-stories/orange-story-navigator/issues
url = https://github.com/navigating-stories/orange-story-navigator
# release version
version = 0.0.19

[options]
packages = find:
package_dir =
    = orangecontrib
include_package_data = True
zip_safe = False
python_requires = >=3.9
install_requires =
    importlib-resources>=1.1.0; python_version < '3.9'
    pyqt6 >= 6.6.0
    pyqtwebengine >= 5.15.6
    orange3 >= 3.36.2
    orange3-text >= 1.15.0
    orange3-network >= 1.9.0
    pandas >= 2.1.2
    spacy >= 3.7.2
    scipy == 1.12.0
    dhtmlparser3 >= 3.0.17
    textblob >= 0.17.1
    textblob-nl >= 0.0.1
    pydot >= 1.4.2
    graphviz >= 0.20.1
    thefuzz >= 0.20.0
    beautifulsoup4 >= 4.12.2
    transformers >= 4.36.2
    torch >= 2.1.2

[options.packages.find]
where = orangecontrib

[options.package_data]
storynavigation =
    *.png
    *.svg
    *.tsv
    *.csv
    *.json
    *.txt

[options.entry_points]
orange3.addon = 
    Story Navigator = storynavigation
orange.widgets = 
    Story Navigator = storynavigation.widgets

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    prospector[with_pyroma]
    pytest
    pytest-mock
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi <= 2.1.0
    myst_parser
    nbsphinx
    nbsphinx_link
    black
    pylint
publishing = 
    twine
    wheel